7903302: cleanup code
Reviewed-by: iris